; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_hdr_indexed.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/http/extr_hpack.c_hpack_decode_hdr_indexed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hpack_decoder = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hpack_decoder*, i32**, i64*, i8**, i8**)* @hpack_decode_hdr_indexed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpack_decode_hdr_indexed(%struct.hpack_decoder* %0, i32** noalias %1, i64* noalias %2, i8** noalias %3, i8** noalias %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.hpack_decoder*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i64*, align 8
  %10 = alloca i8**, align 8
  %11 = alloca i8**, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store %struct.hpack_decoder* %0, %struct.hpack_decoder** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i64* %2, i64** %9, align 8
  store i8** %3, i8*** %10, align 8
  store i8** %4, i8*** %11, align 8
  %15 = load i32**, i32*** %8, align 8
  %16 = load i64*, i64** %9, align 8
  %17 = call i64 @hpack_decode_int(i32 7, i32** %15, i64* %16)
  store i64 %17, i64* %12, align 8
  %18 = load i64, i64* %12, align 8
  %19 = icmp slt i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %5
  store i32 -1, i32* %6, align 4
  br label %42

21:                                               ; preds = %5
  %22 = load %struct.hpack_decoder*, %struct.hpack_decoder** %7, align 8
  %23 = load i64, i64* %12, align 8
  %24 = call i8* @hpack_lookup_name(%struct.hpack_decoder* %22, i64 %23)
  store i8* %24, i8** %13, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = icmp eq i8* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  store i32 -1, i32* %6, align 4
  br label %42

28:                                               ; preds = %21
  %29 = load %struct.hpack_decoder*, %struct.hpack_decoder** %7, align 8
  %30 = load i64, i64* %12, align 8
  %31 = call i8* @hpack_lookup_value(%struct.hpack_decoder* %29, i64 %30)
  store i8* %31, i8** %14, align 8
  %32 = load i8*, i8** %14, align 8
  %33 = icmp eq i8* %32, null
  br i1 %33, label %34, label %37

34:                                               ; preds = %28
  %35 = load i8*, i8** %13, align 8
  %36 = call i32 @free(i8* %35)
  store i32 -1, i32* %6, align 4
  br label %42

37:                                               ; preds = %28
  %38 = load i8*, i8** %13, align 8
  %39 = load i8**, i8*** %10, align 8
  store i8* %38, i8** %39, align 8
  %40 = load i8*, i8** %14, align 8
  %41 = load i8**, i8*** %11, align 8
  store i8* %40, i8** %41, align 8
  store i32 0, i32* %6, align 4
  br label %42

42:                                               ; preds = %37, %34, %27, %20
  %43 = load i32, i32* %6, align 4
  ret i32 %43
}

declare dso_local i64 @hpack_decode_int(i32, i32**, i64*) #1

declare dso_local i8* @hpack_lookup_name(%struct.hpack_decoder*, i64) #1

declare dso_local i8* @hpack_lookup_value(%struct.hpack_decoder*, i64) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
